Changelog for GitPackageManagement.

GitPackageManagement 0.4.0 alpha
==============
- Added basic support for TVs

GitPackageManagement 0.3.1 alpha
==============
- Added lexicon entries for system settings

GitPackageManagement 0.3.0 alpha
==============
- Added update package
- Added update package and recreate database

GitPackageManagement 0.2.0 alpha
==============
- Removed native support for Git commands

GitPackageManagement 0.1.2 alpha
==============
- Added base href for packages directory

GitPackageManagement 0.1.1 alpha
==============
- Fixed elements path

GitPackageManagement 0.1.0 alpha
==============
- Clone package from git to specific folder
- Install package from folder
- Uninstall package

- Installation process can handle:
    - Creating namespace
    - Creating system settings
    - Creating actions and menus
    - Creating elements: chunks, snippets, templates and plugins as static (better for development process)
    - Creating database tables
    - Adding extension package