@@ -4,3 +4,7 @@ config.core.php
 .settings
 nbproject
 .project
+
+_packages/*.*
+!_packages/.gitignore
+!_packages/*.zip
